Project reportes_ods {
  database_type: "MySQL"
  Note: "DBML del módulo de reportes ODS + stubs de users/areas (porque no vienen en el DDL pegado)."
}

/* =========================================================
   STUBS (tablas externas al módulo que se referencian por FK)
   Reemplázalas por tus tablas reales si quieres el diagrama completo.
   ========================================================= */
Table users {
  id int [pk]
}

Table areas {
  id int [pk]
}

/* =========================================================
   0) Catálogos
   ========================================================= */

Table employee_levels {
  id int [pk, increment]
  name varchar(50) [not null, unique]
  sort_order int [not null, default: 0]
  is_active boolean [not null, default: true]
}

Table service_classifications {
  id int [pk, increment]
  name varchar(120) [not null, unique]
  is_active boolean [not null, default: true]
}

Table delivery_media {
  id int [pk, increment]
  name varchar(50) [not null, unique, note: "Digital, Físico, Link, etc."]
  is_active boolean [not null, default: true]
}

Table support_types {
  id int [pk, increment]
  name varchar(120) [not null, unique, note: "Informe, Código, Modelo, Presentación, Base de datos, etc."]
  is_active boolean [not null, default: true]
}

/* =========================================================
   1) Perfil de empleado
   ========================================================= */

Table employee_profiles {
  user_id int [pk, not null]
  external_employee_id varchar(50) [note: "Id del Excel si no coincide con users.id"]
  full_name varchar(200) [not null]
  corporate_email varchar(150) [unique]
  phone varchar(50)
  profession varchar(120)
  job_title varchar(120)
  contract_type varchar(120)
  hire_date date
  contract_end_date date
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [not null, default: `CURRENT_TIMESTAMP`, note: "ON UPDATE CURRENT_TIMESTAMP"]

  Indexes {
    (full_name) [name: "idx_employee_profiles_name"]
  }
}

/* =========================================================
   2) ODS / Orden de servicio
   ========================================================= */

Table service_orders {
  id bigint [pk, increment]
  ods_code varchar(50) [not null, unique, note: "Ej: 90598918"]
  project_name varchar(200)
  area_id int [note: "FK a areas (opcional)"]
  object_text text
  term_text varchar(200)
  start_date date
  end_date date
  status enum('Activa','Suspendida','Cerrada') [not null, default: 'Activa']
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [not null, default: `CURRENT_TIMESTAMP`, note: "ON UPDATE CURRENT_TIMESTAMP"]

  Indexes {
    (area_id) [name: "idx_service_orders_area"]
    (status) [name: "idx_service_orders_status"]
  }
}

Table service_order_employees {
  id bigint [pk, increment]
  service_order_id bigint [not null]
  user_id int [not null]
  level_id int
  assignment_start date
  assignment_end date
  contracted_days int [note: "Días contratados Acta de Inicio (por persona si aplica)"]
  is_active boolean [not null, default: true]
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]

  Indexes {
    (service_order_id, user_id, is_active) [unique, name: "uq_ods_user_active"]
    (user_id) [name: "idx_soe_user"]
    (level_id) [name: "idx_soe_level"]
  }
}

/* =========================================================
   3) Periodos y reportes
   ========================================================= */

Table report_periods {
  id int [pk, increment]
  year smallint [not null]
  month tinyint [not null, note: "1..12"]
  label varchar(20) [not null, unique, note: "2026-01"]
  start_date date [not null]
  end_date date [not null]

  Indexes {
    (year, month) [unique, name: "uq_report_periods_year_month"]
  }
}

Table reports {
  id bigint [pk, increment]
  service_order_id bigint [not null]
  period_id int [not null]
  reported_by int [not null, note: "Usuario que reporta"]
  report_date date [not null]
  service_classification_id int
  status enum('Borrador','Enviado','En revision','Aprobado','Rechazado','Anulado') [not null, default: 'Borrador']
  month_contracted_days int [note: "Días contratados a nivel reporte (si aplica)"]
  notes text
  deleted_at datetime
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [not null, default: `CURRENT_TIMESTAMP`, note: "ON UPDATE CURRENT_TIMESTAMP"]

  Indexes {
    (service_order_id, period_id, reported_by, deleted_at) [unique, name: "uq_reports_unique"]
    (service_order_id) [name: "idx_reports_service_order"]
    (period_id) [name: "idx_reports_period"]
    (reported_by) [name: "idx_reports_reported_by"]
    (status) [name: "idx_reports_status"]
    (deleted_at) [name: "idx_reports_deleted"]
  }
}

/* =========================================================
   4) Catálogo de ítems (recomendado)
   ========================================================= */

Table report_item_catalog {
  id bigint [pk, increment]
  item_general varchar(20) [not null, note: "1,2,8"]
  item_activity varchar(20) [not null, note: "1.1, 1.15, etc"]
  title varchar(255)
  is_active boolean [not null, default: true]

  Indexes {
    (item_general, item_activity) [unique, name: "uq_item_codes"]
    (item_activity) [name: "idx_item_activity"]
  }
}

/* =========================================================
   5) Líneas del reporte
   ========================================================= */

Table report_lines {
  id bigint [pk, increment]
  report_id bigint [not null]
  item_catalog_id bigint
  item_general varchar(20)
  item_activity varchar(20)
  activity_description text [not null]
  support_text text
  support_type_id int
  delivery_medium_id int
  contracted_days int
  days_month decimal(10,2) [not null, default: 0]
  progress_percent decimal(6,4) [not null, default: 0, note: "0..1 o 0..100 según estándar"]
  accumulated_days decimal(10,2) [not null, default: 0]
  accumulated_progress decimal(6,4) [not null, default: 0]
  sort_order int [not null, default: 0]
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [not null, default: `CURRENT_TIMESTAMP`, note: "ON UPDATE CURRENT_TIMESTAMP"]

  Indexes {
    (report_id) [name: "idx_report_lines_report"]
    (item_general, item_activity) [name: "idx_report_lines_item"]
    (support_type_id) [name: "idx_report_lines_support_type"]
    (delivery_medium_id) [name: "idx_report_lines_delivery"]
  }
}

/* =========================================================
   6) Adjuntos / evidencias
   ========================================================= */

Table report_attachments {
  id bigint [pk, increment]
  report_id bigint [not null]
  report_line_id bigint
  uploaded_by int [not null]
  file_name varchar(255) [not null]
  storage_path text [not null]
  mime_type varchar(120)
  file_size bigint
  sha256 char(64)
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]

  Indexes {
    (report_id) [name: "idx_report_attachments_report"]
    (report_line_id) [name: "idx_report_attachments_line"]
    (uploaded_by) [name: "idx_report_attachments_uploaded_by"]
  }
}

/* =========================================================
   7) Comentarios / aprobaciones / eventos
   ========================================================= */

Table report_comments {
  id bigint [pk, increment]
  report_id bigint [not null]
  report_line_id bigint
  user_id int [not null]
  comment text [not null]
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]

  Indexes {
    (report_id) [name: "idx_report_comments_report"]
    (report_line_id) [name: "idx_report_comments_line"]
    (user_id) [name: "idx_report_comments_user"]
  }
}

Table report_approvals {
  id bigint [pk, increment]
  report_id bigint [not null]
  approver_id int [not null]
  decision enum('Pendiente','Aprobado','Rechazado') [not null, default: 'Pendiente']
  decision_message text
  decided_at datetime
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]

  Indexes {
    (report_id, approver_id) [unique, name: "uq_report_approver"]
    (decision) [name: "idx_report_approvals_decision"]
  }
}

Table report_events {
  id bigint [pk, increment]
  report_id bigint [not null]
  user_id int
  event_type enum('CREATED','UPDATED','SUBMITTED','APPROVED','REJECTED','STATUS_CHANGED','IMPORTED','DELETED') [not null]
  payload json
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]

  Indexes {
    (report_id) [name: "idx_report_events_report"]
    (event_type) [name: "idx_report_events_type"]
    (created_at) [name: "idx_report_events_created_at"]
  }
}

/* =========================================================
   8) Importación desde Excel
   ========================================================= */

Table import_batches {
  id bigint [pk, increment]
  source_name varchar(255) [not null]
  imported_by int [not null]
  imported_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
  status enum('Procesando','Exitoso','Con errores') [not null, default: 'Procesando']
  summary json

  Indexes {
    (imported_by) [name: "idx_import_batches_imported_by"]
  }
}

Table import_errors {
  id bigint [pk, increment]
  batch_id bigint [not null]
  row_ref varchar(50)
  message text [not null]
  raw_payload json
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]

  Indexes {
    (batch_id) [name: "idx_import_errors_batch"]
  }
}

/* =========================================================
   Relaciones (FK)
   ========================================================= */

Ref: employee_profiles.user_id > users.id [delete: cascade]

Ref: service_orders.area_id > areas.id [delete: set null]

Ref: service_order_employees.service_order_id > service_orders.id [delete: cascade]
Ref: service_order_employees.user_id > users.id [delete: cascade]
Ref: service_order_employees.level_id > employee_levels.id [delete: set null]

Ref: reports.service_order_id > service_orders.id
Ref: reports.period_id > report_periods.id
Ref: reports.reported_by > users.id
Ref: reports.service_classification_id > service_classifications.id [delete: set null]

Ref: report_lines.report_id > reports.id [delete: cascade]
Ref: report_lines.item_catalog_id > report_item_catalog.id [delete: set null]
Ref: report_lines.support_type_id > support_types.id [delete: set null]
Ref: report_lines.delivery_medium_id > delivery_media.id [delete: set null]

Ref: report_attachments.report_id > reports.id [delete: cascade]
Ref: report_attachments.report_line_id > report_lines.id [delete: set null]
Ref: report_attachments.uploaded_by > users.id

Ref: report_comments.report_id > reports.id [delete: cascade]
Ref: report_comments.report_line_id > report_lines.id [delete: set null]
Ref: report_comments.user_id > users.id

Ref: report_approvals.report_id > reports.id [delete: cascade]
Ref: report_approvals.approver_id > users.id

Ref: report_events.report_id > reports.id [delete: cascade]
Ref: report_events.user_id > users.id [delete: set null]

Ref: import_batches.imported_by > users.id
Ref: import_errors.batch_id > import_batches.id [delete: cascade]